; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/sysdev/ge/extr_ge_pic.c_gef_pic_cascade.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/sysdev/ge/extr_ge_pic.c_gef_pic_cascade.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_desc = type { i32 }
%struct.irq_chip = type { i32 (i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_desc*)* @gef_pic_cascade to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gef_pic_cascade(%struct.irq_desc* %0) #0 {
  %2 = alloca %struct.irq_desc*, align 8
  %3 = alloca %struct.irq_chip*, align 8
  %4 = alloca i32, align 4
  store %struct.irq_desc* %0, %struct.irq_desc** %2, align 8
  %5 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %6 = call %struct.irq_chip* @irq_desc_get_chip(%struct.irq_desc* %5)
  store %struct.irq_chip* %6, %struct.irq_chip** %3, align 8
  %7 = call i32 (...) @gef_pic_get_irq()
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @generic_handle_irq(i32 %11)
  br label %13

13:                                               ; preds = %10, %1
  %14 = load %struct.irq_chip*, %struct.irq_chip** %3, align 8
  %15 = getelementptr inbounds %struct.irq_chip, %struct.irq_chip* %14, i32 0, i32 0
  %16 = load i32 (i32*)*, i32 (i32*)** %15, align 8
  %17 = load %struct.irq_desc*, %struct.irq_desc** %2, align 8
  %18 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %17, i32 0, i32 0
  %19 = call i32 %16(i32* %18)
  ret void
}

declare dso_local %struct.irq_chip* @irq_desc_get_chip(%struct.irq_desc*) #1

declare dso_local i32 @gef_pic_get_irq(...) #1

declare dso_local i32 @generic_handle_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
